@@ -28,6 +28,11 @@ tests = [
     (1, './02-subpub-qos0.py'),
     (1, './02-subpub-qos1.py'),
     (1, './02-subpub-qos2.py'),
+	(1, './02-subpub-qos1-bad-pubrec.py'),
+	(1, './02-subpub-qos1-bad-pubcomp.py'),
+    (1, './02-subpub-qos2-bad-puback-1.py'),
+    (1, './02-subpub-qos2-bad-puback-2.py'),
+	(1, './02-subpub-qos2-bad-pubcomp.py'),
     (1, './02-unsubscribe-qos0.py'),
     (1, './02-unsubscribe-qos1.py'),
     (1, './02-unsubscribe-qos2.py'),
